--- a/ng-app/src/app/standard/standard-list/standard-list.component.html
+++ b/ng-app/src/app/standard/standard-list/standard-list.component.html
@@ -15,7 +15,7 @@
     <!-- Checkbox Column -->
     <ng-container matColumnDef="checkbox">
         <th mat-header-cell *matHeaderCellDef>#</th>
-        <td mat-cell *matCellDef="let item">
+        <td mat-cell *matCellDef="let item" class="td-checkbox">
             <mat-checkbox [(ngModel)]="item.selected" (change)="toggleItemSelection()"></mat-checkbox>
         </td>
     </ng-container>
@@ -24,7 +24,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
             {{ col.displayName }}
         </th>
-        <td mat-cell *matCellDef="let item">
+        <td mat-cell *matCellDef="let item" [ngStyle]="{width: col.width}">
             <span *ngIf="col.format === 'display'">{{ getValue(item, col) }}</span>
             <a [routerLink]="[col.link + '/' + item._id]" *ngIf="col.format === 'link'">{{ getValue(item, col) }}</a>
             <div *ngIf="col.format === 'template'">
