--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
@@ -401,13 +401,13 @@
   <!-- Tab for Related Payment Vouchers -->
   <mat-tab label="Payment Voucher">
     <div class="tab-body">
-
+      <pre>{{ paymentVouchers | json }}</pre>
     </div>
   </mat-tab>
   <!-- Tab for Related Payments -->
   <mat-tab label="Payments">
     <div class="tab-body">
-
+      <pre>{{ payments | json }}</pre>
     </div>
   </mat-tab>
   <!-- Tab6: Cost & Profit -->
