--- a/ng-app/src/app/customer/quotation-list/quotation-list.component.html
+++ b/ng-app/src/app/customer/quotation-list/quotation-list.component.html
@@ -1,3 +1,1 @@
-<p>
-  quotation-list works!
-</p>
+<app-standard-list title="Invoice" domainName="invoice" [columns]="columns" [filterList]="filterList" [includes]="includes"></app-standard-list>
