--- a/ng-app/src/app/customer/quotation-form/quotation-form.component.html
+++ b/ng-app/src/app/customer/quotation-form/quotation-form.component.html
@@ -1,3 +1,2 @@
-<p>
-  quotation-form works!
-</p>
+<app-standard-form title="Quotation" domainName="quotation" [fields]="fields" [includes]="includes"
+  [(dataSource)]="formData"></app-standard-form>
