--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
@@ -246,7 +246,10 @@
           *ngIf="hasAttendeeIsSelected(eventPlan.attendees)">
           Group Attendees
         </button>
-        <button mat-raised-button class="btn-end" color="primary" (click)="getAttendees()">
+        <button mat-raised-button class="btn-end" color="primary" (click)="importAttendees()">
+          <mat-icon>import_export</mat-icon> Import
+        </button>
+        <button mat-raised-button class="" color="primary" (click)="getAttendees()">
           <mat-icon>refresh</mat-icon> Refresh
         </button>
       </div>
