--- a/ng-app/src/app/event/event-plan-view/import-attendees/import-attendees.component.html
+++ b/ng-app/src/app/event/event-plan-view/import-attendees/import-attendees.component.html
@@ -31,5 +31,6 @@
       </tr>
     </tbody>
   </table>
-  <button mat-raised-button type="button" (click)="onImportData()">Import</button>
+  <button mat-raised-button color="primary" type="button" (click)="onImportData(jsonData)">Import</button>
+  <button mat-raised-button type="button" (click)="onCancel(jsonData)">Cancel</button>
 </div>
