--- a/ng-app/src/app/event/event-plan-view/import-attendees/import-attendees.component.html
+++ b/ng-app/src/app/event/event-plan-view/import-attendees/import-attendees.component.html
@@ -1,8 +1,9 @@
 <div class='maincontainer'>
   <!-- <gc-spread-sheets [hostStyle]="hostStyle" (workbookInitialized)="workbookInit($event)"></gc-spread-sheets> -->
-  <div class=''>
-    <p>Open Excel File</p>
-    <input type="file" name="files[]" multiple id="jsonFile" accept=".xlsx" (change)="onFileChange($event)" />
+  <div class="header">
+    <p>Import Attendee Data</p>
+    <input type="file" class="hidden" name="files[]" multiple id="jsonFile" accept=".xlsx" (change)="onFileChange($event)" #importFileInput />
+    <button mat-raised-button color="primary" type="button" (click)="importFileInput.click()">Upload File</button>
   </div>
   <!-- <div class='exportExcel'>
     <p>Save Excel File</p>
@@ -31,6 +32,8 @@
       </tr>
     </tbody>
   </table>
-  <button mat-raised-button color="primary" type="button" (click)="onImportData(jsonData)" *ngIf="jsonData && jsonData.length > 0">Import</button>
-  <button mat-raised-button type="button" (click)="onCancel(jsonData)">Cancel</button>
+  <div class="btn-group">
+    <button mat-raised-button color="primary" type="button" (click)="onImportData(jsonData)" *ngIf="jsonData && jsonData.length > 0">Import</button>
+    <button mat-raised-button type="button" (click)="onCancel()">Cancel</button>
+  </div>
 </div>
