--- a/ng-app/src/app/customer/quotation-list/quotation-list.component.html
+++ b/ng-app/src/app/customer/quotation-list/quotation-list.component.html
@@ -1,1 +1,1 @@
-<app-standard-list title="Invoice" domainName="invoice" [columns]="columns" [filterList]="filterList" [includes]="includes"></app-standard-list>
+<app-standard-list title="Quotation" domainName="quotation" [columns]="columns" [filterList]="filterList" [includes]="includes"></app-standard-list>
