--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
@@ -235,7 +235,7 @@
           <mat-select [(ngModel)]="attendeeQueryModel.type">
             <mat-option value="{{ option }}" *ngFor="let option of attendeeQueryModel.typeOptions">
               {{option | titleDisplay }}</mat-option>
-              <mat-option value="group">Group</mat-option>
+            <mat-option value="group">Group</mat-option>
           </mat-select>
         </mat-form-field>
 
@@ -247,7 +247,8 @@
           *ngIf="hasAttendeeIsSelected(eventPlan.attendees)">
           Group Attendees
         </button>
-        <a mat-raised-button class="btn-end" color="primary" target="new" href="http://localhost:3000/assets/import_attendee_template.xlsx">
+        <a mat-raised-button class="btn-end" color="primary" target="new"
+          href="http://localhost:3000/assets/import_attendee_template.xlsx">
           <mat-icon>cloud_download</mat-icon> Template
         </a>
         <button mat-raised-button color="primary" (click)="importAttendees()">
@@ -382,7 +383,8 @@
       <div [ngTemplateOutlet]="invoice ? showInvoiceInfo : noInvoiceMessage"></div>
       <ng-template #noInvoiceMessage>
         <p>No Invoice Yet, Please create an invoice for this event plan.</p>
-        <p>Click <a [routerLink]="['/invoice/add']" [queryParams]="{ eventPlan: eventPlan._id, customer: eventPlan.customer?._id }">here</a> redirect to
+        <p>Click <a [routerLink]="['/invoice/add']"
+            [queryParams]="{ eventPlan: eventPlan._id, customer: eventPlan.customer?._id }">here</a> redirect to
           new invoice form page.</p>
       </ng-template>
       <ng-template #showInvoiceInfo>
@@ -500,35 +502,12 @@
           </mat-card-content>
           <mat-divider></mat-divider>
           <mat-card-actions>
-            <button mat-raised-button color="primary" class="btn-sm">Edit</button>
+            <button mat-raised-button color="primary" class="btn-sm"
+              [routerLink]="['/supplier-invoice/edit/' + supplierInvoice._id]">Edit</button>
           </mat-card-actions>
         </mat-card>
       </div>
-
-      <table class="table table-bordered supplier-invoices">
-        <colgroup>
-          <col style="width: 300px">
-          <col>
-          <col style="width: 200px">
-        </colgroup>
-        <thead>
-          <tr>
-            <th>Provider</th>
-            <th>Code</th>
-            <th>Status</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let supplerInvoice of supplierInvoices">
-            <td>{{ supplerInvoice.provider.name }}</td>
-            <td>{{ supplerInvoice.code }}</td>
-            <td>{{ supplerInvoice.status }}</td>
-            <td></td>
-          </tr>
-        </tbody>
-      </table>
-      <pre>{{ supplierInvoices | json }}</pre>
+      <!-- <pre>{{ supplierInvoices | json }}</pre> -->
     </div>
   </mat-tab>
   <!-- Tab for Related Payment Vouchers -->
@@ -537,6 +516,101 @@
       <button mat-raised-button color="primary" type="button" class="btn-sm" [routerLink]="['/payment-voucher/add']"
         [queryParams]="{ eventPlan: eventPlan._id }">Add
         New Payment Voucher</button>
+      <div class="payment-voucher-wrapper">
+        <mat-card *ngFor="let paymentVoucher of paymentVouchers">
+          <mat-card-header>
+            <mat-card-title>{{ paymentVoucher.code }}</mat-card-title>
+          </mat-card-header>
+          <mat-divider></mat-divider>
+          <mat-card-content>
+            <div class="view-field">
+              <label class="mat-body-strong">Provider</label>
+              <div class="mat-body">{{ paymentVoucher.provider.name }}</div>
+            </div>
+            <div class="view-field">
+              <label class="mat-body-strong">Total Amount</label>
+              <div class="mat-body">{{ getLinesTotalAmount(paymentVoucher.lines) | currency: 'MYR ' }}</div>
+            </div>
+            <div class="view-field">
+              <label class="mat-body-strong">Status</label>
+              <div class="mat-body">{{ paymentVoucher.status }}</div>
+            </div>
+            <div class="view-field">
+              <label class="mat-body-strong">Payment Type</label>
+              <div class="mat-body">{{ paymentVoucher.paymentType | titleDisplay }}</div>
+            </div>
+            <div class="view-field">
+              <label class="mat-body-strong">Remarks</label>
+              <div class="mat-body">{{ paymentVoucher.remarks }}</div>
+            </div>
+            <div *ngIf="paymentVoucher.paymentType === 'Cheque'">
+              <div class="view-field">
+                <label class="mat-body-strong">Reference No.</label>
+                <div class="mat-body">{{ paymentVoucher.chequeInfo.referenceNumber }}</div>
+              </div>
+              <div class="view-field">
+                <label class="mat-body-strong">Payee</label>
+                <div class="mat-body">{{ paymentVoucher.chequeInfo.payeeName }} ({{ paymentVoucher.chequeInfo.payeeIdentityNumber }})</div>
+              </div>
+              <div class="view-field">
+                <label class="mat-body-strong">Drawee</label>
+                <div class="mat-body">{{ paymentVoucher.chequeInfo.draweeName }} ({{ paymentVoucher.chequeInfo.draweeIdentityNumber }})</div>
+              </div>
+              <div class="view-field">
+                <label class="mat-body-strong">Issued Date</label>
+                <div class="mat-body">{{ paymentVoucher.chequeInfo.issuedDate | date: 'dd-MM-yyyy' }}</div>
+              </div>
+            </div>
+            <div *ngIf="paymentVoucher.paymentType === 'BankTransfer'">
+              <div class="view-field">
+                <label class="mat-body-strong">Reference No.</label>
+                <div class="mat-body">{{ paymentVoucher.bankTransferInfo.referenceNumber }}</div>
+              </div>
+              <div class="view-field">
+                <label class="mat-body-strong">Bank</label>
+                <div class="mat-body">{{ paymentVoucher.bankTransferInfo.bank }}</div>
+              </div>
+              <div class="view-field">
+                <label class="mat-body-strong">Account Number</label>
+                <div class="mat-body">{{ paymentVoucher.bankTransferInfo.accountNumber }}</div>
+              </div>
+              <div class="view-field">
+                <label class="mat-body-strong">Payee</label>
+                <div class="mat-body">{{ paymentVoucher.bankTransferInfo.payeeName }} ({{ paymentVoucher.bankTransferInfo.payeeIdentityNumber }})</div>
+              </div>
+              <div class="view-field">
+                <label class="mat-body-strong">Transfered Date</label>
+                <div class="mat-body">{{ paymentVoucher.bankTransferInfo.transferedDate | date: 'dd-MM-yyyy' }}</div>
+              </div>
+            </div>
+            <table class="table table-bordered payment-vouchers">
+              <thead>
+                <tr>
+                  <th>Name</th>
+                  <th>Unit</th>
+                  <th>Unit Price</th>
+                  <th>Quantity</th>
+                  <th>Sub Total</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let line of paymentVoucher.lines">
+                  <td>{{ line.name }}</td>
+                  <td>{{ line.unit }}</td>
+                  <td>{{ line.unitPrice }}</td>
+                  <td>{{ line.quantity }}</td>
+                  <td>{{ (line.unitPrice * line.quantity) | currency: 'MYR ' }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </mat-card-content>
+          <mat-divider></mat-divider>
+          <mat-card-actions>
+            <button mat-raised-button color="primary" class="btn-sm"
+              [routerLink]="['/supplier-invoice/edit/' + paymentVoucher._id]">Edit</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
       <table class="table table-bordered payment-voucher">
         <colgroup>
           <col style="width: 300px">
