payment (to supplier)

--- a/ng-app/src/app/attendee/payment-form/payment-form.component.html
+++ b/ng-app/src/app/attendee/payment-form/payment-form.component.html
@@ -1,3 +1,2 @@
-<p>
-  payment-form works!
-</p>
+<app-standard-form title="Payment" domainName="payment" [fields]="fields" [includes]="includes" [(dataSource)]="formData"></app-standard-form>
+
